not tested: Implement error handling for Routing feature